<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProductDetailActivity">
    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_product_detail"
            android:textAlignment="center"
            android:textColor="#9CC966DB"
            android:textSize="26sp"
            android:textStyle="bold"
            android:padding="8dp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_product_id"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_product_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_product_code"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_product_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_product_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_product_unit_price"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#9CC966DB"
                android:text="@string/title_save" />

            <Button
                android:id="@+id/btnClose"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#9CC966DB"
                android:text="@string/title_close" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>